--- a/Style/style.css
+++ b/Style/style.css
@@ -188,3 +188,54 @@ body {
     gap: 74px;
 }
 
+@media screen and (max-width: 551px) {
+    .flex, .grow_flex {
+        flex-direction: column;
+    }
+
+    .container{
+        max-width: 500px;
+    }
+
+    .header {
+        gap: 30px;
+    }
+
+    .header_nav {
+        display: none;
+    }
+
+    .main {
+        text-align: center;
+    }
+
+    .main_title {
+        font-size: 48px;
+        line-height: 55px;
+    }
+
+    .main_text {
+        margin: 18px auto;
+    }
+
+    .main_img {
+        margin-top: 40px;
+    }
+
+    .grow {
+        gap: 32px;
+        margin: 60px auto;
+    }
+
+    .grow_title {
+        text-align: center;
+    }
+
+    .footer nav {
+        display: none;
+    }
+
+    .commerce_title {
+        margin-bottom: 40px;
+    }
+}
